# docs/swagger.json
@@ -848,6 +848,10 @@
     "definitions": {
         "authentification.LoginPayload": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
@@ -859,9 +863,16 @@
         },
         "dbmodel.AnnonceEntry": {
             "type": "object",
+            "required": [
+                "date",
+                "duration",
+                "tags",
+                "title"
+            ],
             "properties": {
                 "address": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Rue de la Paix 1, 1000 Lausanne"
                 },
                 "candidature": {
                     "type": "array",
@@ -870,16 +881,20 @@
                     }
                 },
                 "date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "02/01/2025"
                 },
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Description de l'annonce"
                 },
                 "duration": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2
                 },
                 "is_remote": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
                 "tags": {
                     "type": "array",
@@ -894,7 +909,8 @@
                     }
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Titre de l'annonce"
                 }
             }
         },
@@ -972,21 +988,35 @@
         },
         "model.AnnonceRequest": {
             "type": "object",
+            "required": [
+                "address",
+                "date",
+                "description",
+                "duration",
+                "is_remote",
+                "tags",
+                "title"
+            ],
             "properties": {
                 "address": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Rue de la Paix 1, 1000 Lausanne"
                 },
                 "date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "02/01/2025"
                 },
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Description de l'annonce"
                 },
                 "duration": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 2
                 },
                 "is_remote": {
-                    "type": "boolean"
+                    "type": "boolean",
+                    "example": true
                 },
                 "tags": {
                     "type": "array",
@@ -995,7 +1025,8 @@
                     }
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Titre de l'annonce"
                 }
             }
         },
@@ -1039,15 +1070,23 @@
         },
         "model.CandidatureRequest": {
             "type": "object",
+            "required": [
+                "annonce_id",
+                "date",
+                "status",
+                "user_id"
+            ],
             "properties": {
                 "annonce_id": {
                     "type": "integer"
                 },
                 "date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "02/01/2025"
                 },
                 "status": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Waiting"
                 },
                 "user_id": {
                     "type": "integer"
@@ -1076,9 +1115,13 @@
         },
         "model.TagRequest": {
             "type": "object",
+            "required": [
+                "name"
+            ],
             "properties": {
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Tag name"
                 }
             }
         },
@@ -1095,27 +1138,43 @@
         },
         "model.UserRequest": {
             "type": "object",
+            "required": [
+                "bio",
+                "city",
+                "email",
+                "first_name",
+                "last_name",
+                "password",
+                "phone"
+            ],
             "properties": {
                 "bio": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Je suis un étudiant en informatique"
                 },
                 "city": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Nantes"
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "example@example.com"
                 },
                 "first_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Prénom"
                 },
                 "last_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Nom de famille"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "password"
                 },
                 "phone": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "0791234567"
                 }
             }
         },
